--- a/app/src/main/res/layout/fragment_nav_template.xml
+++ b/app/src/main/res/layout/fragment_nav_template.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:id="@+id/nav_template">
@@ -49,4 +49,4 @@
             android:text="Login"/>
 
     </LinearLayout>
-</ScrollView>
+</RelativeLayout>
