--- a/app/src/main/res/layout/nav_manage_goals.xml
+++ b/app/src/main/res/layout/nav_manage_goals.xml
@@ -1,39 +1,376 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="#f1f1f1"
-tools:context=".MainActivity" >
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:id="@+id/nav_manage_goals"
+    android:background="#f1f1f1" >
 
-    <RelativeLayout
-        android:orientation="vertical"
-        android:id="@+id/manageGoalsShortLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">
+    <LinearLayout
+        android:id="@+id/manageGoalsLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/manageShortGoalsRecyclerView"
+        <LinearLayout
+            android:id="@+id/manageGoalsShortLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@drawable/medium_border"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/shortTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Short Goals" />
+
+            <LinearLayout
+                android:id="@+id/manageGoalsShortHolderLayout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/shortGoal0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:background="@drawable/small_border"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/shortGoal0Image"
+                        android:layout_width="fill_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_menu_camera" />
+
+                    <TextView
+                        android:id="@+id/shortGoal0Name"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Name" />
+
+                    <TextView
+                        android:id="@+id/shortGoal0Valid"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Valid" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/shortGoal1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:background="@drawable/small_border"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/shortGoal1Image"
+                        android:layout_width="fill_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_menu_camera" />
+
+                    <TextView
+                        android:id="@+id/shortGoal1Name"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Name" />
+
+                    <TextView
+                        android:id="@+id/shortGoal1Valid"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Valid" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/shortGoal2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:background="@drawable/small_border"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/shortGoal2Image"
+                        android:layout_width="fill_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_menu_camera" />
+
+                    <TextView
+                        android:id="@+id/shortGoal2Name"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Name" />
+
+                    <TextView
+                        android:id="@+id/shortGoal2Valid"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Valid" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/shortGoal3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:background="@drawable/small_border"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/shortGoal3Image"
+                        android:layout_width="fill_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_menu_camera" />
+
+                    <TextView
+                        android:id="@+id/shortGoal3Name"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Name" />
+
+                    <TextView
+                        android:id="@+id/shortGoal3Valid"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Valid" />
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/manageGoalsMediumLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@drawable/medium_border"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/mediumTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Medium Goals" />
+
+            <LinearLayout
+                android:id="@+id/manageGoalsMediumHolderLayout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/mediumGoal0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:background="@drawable/small_border"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/mediumGoal0Image"
+                        android:layout_width="fill_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_menu_camera" />
+
+                    <TextView
+                        android:id="@+id/mediumGoal0Name"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Name" />
+
+                    <TextView
+                        android:id="@+id/mediumGoal0Valid"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Valid" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/mediumGoal1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:background="@drawable/small_border"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/mediumGoal1Image"
+                        android:layout_width="fill_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_menu_camera" />
+
+                    <TextView
+                        android:id="@+id/mediumGoal1Name"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Name" />
+
+                    <TextView
+                        android:id="@+id/mediumGoal1Valid"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Valid" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/mediumGoal2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:background="@drawable/small_border"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/mediumGoal2Image"
+                        android:layout_width="fill_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_menu_camera" />
+
+                    <TextView
+                        android:id="@+id/mediumGoal2Name"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Name" />
+
+                    <TextView
+                        android:id="@+id/mediumGoal2Valid"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Valid" />
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/manageGoalsLongLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@drawable/medium_border"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/longTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Long Goals" />
+
+            <LinearLayout
+                android:id="@+id/manageGoalsLongHolderLayout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/longGoal0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:background="@drawable/small_border"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/longGoal0Image"
+                        android:layout_width="fill_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_menu_camera" />
+
+                    <TextView
+                        android:id="@+id/longGoal0Name"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Name" />
+
+                    <TextView
+                        android:id="@+id/longGoal0Valid"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Valid" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/longGoal1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:background="@drawable/small_border"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/longGoal1Image"
+                        android:layout_width="fill_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_menu_camera" />
+
+                    <TextView
+                        android:id="@+id/longGoal1Name"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Name" />
+
+                    <TextView
+                        android:id="@+id/longGoal1Valid"
+                        style="@style/InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Valid" />
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/manageGoals_AddButton"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"/>
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:id="@+id/manageGoalsMiddleLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_vertical"
+            android:imeOptions="actionSend"
+            android:tag="add_goal_button"
+            android:text="Add new Goal" />
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:id="@+id/manageGoalsLongLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
