added goal classes and images

--- a/app/src/main/res/layout/nav_manage_goals.xml
+++ b/app/src/main/res/layout/nav_manage_goals.xml
@@ -155,6 +155,7 @@
                         style="@style/InputLabel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
                         android:text="Valid" />
                 </LinearLayout>
             </LinearLayout>
@@ -320,6 +321,7 @@
                         style="@style/InputLabel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
                         android:text="Name" />
 
                     <TextView
@@ -327,6 +329,7 @@
                         style="@style/InputLabel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
                         android:text="Valid" />
                 </LinearLayout>
 
@@ -349,6 +352,7 @@
                         style="@style/InputLabel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
                         android:text="Name" />
 
                     <TextView
@@ -356,6 +360,7 @@
                         style="@style/InputLabel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
                         android:text="Valid" />
                 </LinearLayout>
             </LinearLayout>
