--- a/app/src/main/res/layout/frg_add_goals.xml
+++ b/app/src/main/res/layout/frg_add_goals.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:paddingTop="56dp"
         android:paddingLeft="24dp"
-        android:paddingRight="24dp">
+        android:paddingRight="24dp"
+        android:id="@+id/add_goal_ll">
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -31,7 +32,18 @@
             android:text="Goal Type"
             style="@style/InputLabel" />
         <Spinner
-            android:id="@+id/spin_goalsType"
+            android:id="@+id/spin_goalType"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Goal Class"
+            style="@style/InputLabel" />
+        <Spinner
+            android:id="@+id/spin_goalClass"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
@@ -41,7 +53,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/btn_saveGoal"
             android:layout_gravity="center_vertical"
-            android:imeOptions="actionDone"
             android:text="Save Goal"
             android:tag="save_button"/>
     </LinearLayout>
