--- a/app/src/main/res/layout/frg_add_goals.xml
+++ b/app/src/main/res/layout/frg_add_goals.xml
@@ -22,14 +22,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:hint="Goal Name"
+                android:hint="@string/goal_name"
                 android:imeOptions="actionDone"/>
         </android.support.design.widget.TextInputLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Goal Type"
+            android:text="@string/goal_type"
             style="@style/InputLabel" />
         <Spinner
             android:id="@+id/spin_goalType"
@@ -40,7 +40,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Goal Class"
+            android:text="@string/goal_class"
             style="@style/InputLabel" />
         <Spinner
             android:id="@+id/spin_goalClass"
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/btn_saveGoal"
             android:layout_gravity="center_vertical"
-            android:text="Save Goal"
+            android:text="@string/save_goal"
             android:tag="save_button"/>
     </LinearLayout>
 </ScrollView>
