--- a/app/src/main/res/layout/nav_mood.xml
+++ b/app/src/main/res/layout/nav_mood.xml
@@ -48,7 +48,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="Current Mood:"
+                    android:text="@string/current_mood"
                     android:textAllCaps="false"
                     android:textStyle="bold" />
                 <TextView
@@ -63,7 +63,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="Current Status:"
+                    android:text="@string/current_status"
                     android:textAllCaps="false"
                     android:textStyle="bold" />
                 <TextView
@@ -79,11 +79,6 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_sentiment_neutral_3x" />
 
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Button" />
             </LinearLayout>
 
             <LinearLayout
@@ -98,7 +93,7 @@
                     style="@style/Widget.ProgressBar.Vertical"
                     android:layout_width="12dip"
                     android:layout_height="300dip"
-                    android:max="5"
+                    android:max="10"
                     android:min="0" />
 
             </LinearLayout>
