--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,33 +6,28 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_mood"
-            android:icon="@mipmap/ic_launcher"
-            android:title="Mood Manager" />
+            android:icon="@drawable/ic_mood"
+            android:title="@string/mood_manager" />
         <item
             android:id="@+id/nav_manage_goals"
-            android:icon="@mipmap/ic_launcher"
-            android:title="Goals Manager" />
-        <item
-            android:id="@+id/nav_placeholder"
-            android:icon="@mipmap/ic_launcher"
-            android:title="Placeholder" />
+            android:icon="@drawable/ic_alarm_on"
+            android:title="@string/goals_manager" />
         <item
             android:id="@+id/nav_add_goals"
-            android:icon="@mipmap/ic_launcher"
             android:visible="false"
             android:title="Add Goals" />
     </group>
 
-    <item android:title="Sonstiges">
+    <item android:title="@string/other">
         <menu>
             <item
-                android:id="@+id/nav_infos"
-                android:icon="@mipmap/ic_launcher"
-                android:title="Infos" />
-            <item
                 android:id="@+id/nav_settings"
-                android:icon="@mipmap/ic_launcher"
+                android:icon="@drawable/ic_build"
                 android:title="Einstellungen" />
+            <item
+                android:id="@+id/nav_infos"
+                android:icon="@drawable/ic_copyright"
+                android:title="Infos" />
         </menu>
     </item>
 </menu>
