--- a/app/src/main/res/menu/goal_popup_menu.xml
+++ b/app/src/main/res/menu/goal_popup_menu.xml
@@ -2,11 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/confirm"
-        android:title="Confirm" />
+        android:title="@string/confirm" />
     <item
         android:id="@+id/delete"
-        android:title="CDelete"/>
-    <item
-        android:id="@+id/three"
-        android:title="Three"/>
+        android:title="@string/delete"/>
+
 </menu>
