--- a/app/src/main/res/layout/frg_add_goals.xml
+++ b/app/src/main/res/layout/frg_add_goals.xml
@@ -27,21 +27,24 @@
         </android.support.design.widget.TextInputLayout>
 
         <TextView
+            style="@style/InputLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/goal_type"
-            style="@style/InputLabel" />
+            android:layout_gravity="bottom|left"
+            android:text="@string/goal_type" />
         <Spinner
             android:id="@+id/spin_goalType"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp" />
+
         <TextView
+            style="@style/InputLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/goal_class"
-            style="@style/InputLabel" />
+            android:layout_gravity="bottom|left"
+            android:text="@string/goal_class" />
         <Spinner
             android:id="@+id/spin_goalClass"
             android:layout_width="fill_parent"
