--- a/app/src/main/res/layout/nav_manage_goals.xml
+++ b/app/src/main/res/layout/nav_manage_goals.xml
@@ -1,173 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="fill_parent">
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_manage_goals"
-    android:background="#f1f1f1" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#f1f1f1"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/manageGoalsLayout"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/medium_border"
         android:gravity="center"
         android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/manageGoalsShortLayout"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_height="fill_parent"
             android:background="@drawable/medium_border"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/shortTextView"
                 style="@style/InputLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:text="@string/short_goals" />
 
-            <LinearLayout
-                android:id="@+id/manageGoalsShortHolderLayout"
+            <ListView
+                android:id="@+id/shortListview"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:id="@+id/shortGoal0"
-                    android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
-                    android:background="@drawable/small_border"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/shortGoal0Image"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_not_interested" />
-
-                    <TextView
-                        android:id="@+id/shortGoal0Name"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/name" />
-
-                    <TextView
-                        android:id="@+id/shortGoal0Valid"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/valid_until" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/shortGoal1"
-                    android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
-                    android:background="@drawable/small_border"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/shortGoal1Image"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_not_interested" />
-
-                    <TextView
-                        android:id="@+id/shortGoal1Name"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/name" />
-
-                    <TextView
-                        android:id="@+id/shortGoal1Valid"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/valid_until" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/shortGoal2"
-                    android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
-                    android:background="@drawable/small_border"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/shortGoal2Image"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_not_interested" />
-
-                    <TextView
-                        android:id="@+id/shortGoal2Name"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/name" />
-
-                    <TextView
-                        android:id="@+id/shortGoal2Valid"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/valid_until" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/shortGoal3"
-                    android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
-                    android:background="@drawable/small_border"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/shortGoal3Image"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_not_interested" />
-
-                    <TextView
-                        android:id="@+id/shortGoal3Name"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/name" />
-
-                    <TextView
-                        android:id="@+id/shortGoal3Valid"
-                        style="@style/InputLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:text="@string/valid_until" />
-                </LinearLayout>
-            </LinearLayout>
+                android:layout_height="wrap_content"></ListView>
         </LinearLayout>
 
 
+        <LinearLayout
+            android:id="@+id/manageGoalsMiddleLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@drawable/medium_border"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                style="@style/InputLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="@string/medium_goals" />
+
+            <ListView
+                android:id="@+id/middleListview"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"></ListView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/manageGoalsLongLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@drawable/medium_border"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                style="@style/InputLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="@string/long_goals" />
+
+            <ListView
+                android:id="@+id/longListview"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"></ListView>
+        </LinearLayout>
+
+
+        <Button
+            android:id="@+id/manageGoals_AddButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_vertical"
+            android:imeOptions="actionSend"
+            android:tag="add_goal_button"
+            android:text="@string/add_new_goal" />
+
+    </LinearLayout>
+
+    <!--
         <LinearLayout
             android:id="@+id/manageGoalsMediumLayout"
             android:layout_width="fill_parent"
@@ -376,19 +306,11 @@
                         android:gravity="center_horizontal"
                         android:text="@string/valid_until" />
                 </LinearLayout>
-            </LinearLayout>
 
-        </LinearLayout>
 
-        <Button
-            android:id="@+id/manageGoals_AddButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_vertical"
-            android:imeOptions="actionSend"
-            android:tag="add_goal_button"
-            android:text="@string/add_new_goal" />
-    </LinearLayout>
 
+                -->
+
+
+</LinearLayout>
 </ScrollView>
